--- a/.github/workflows/install-postgres-database.yml
+++ b/.github/workflows/install-postgres-database.yml
@@ -20,32 +20,24 @@ jobs:
           key: ${{ secrets.STAGE_SERVER_PRIVATE_SSH_KEY }}
           script: |
             # Pull the PostgreSQL image
-            docker pull postgres:13
+            docker pull postgres:14
 
-            # Run PostgreSQL container
+            # Run Database (for production)
             docker run -d \
-              --name postgres_container \
+              --name postgres_db \
               -e POSTGRES_PASSWORD=${{ env.POSTGRES_PASSWORD }} \
               -p 5432:5432 \
               -v postgres_data:/var/lib/postgresql/data \
-              postgres:13
+              postgres:14
 
-            # Run PostgreSQL Test container
+            # Run Database (for testing)
             docker run -d \
               --name postgres_dbtest \
               -e POSTGRES_TEST_PASSWORD=${{ env.POSTGRES_TEST_PASSWORD }} \
               -p 5436:5432 \
               -v postgres_data:/var/lib/postgresql/data \
-              postgres:13
+              postgres:14
 
-            # Verify the container is running
-            docker ps | grep postgres_container
-
-            # Open port 5432 (PostgreSQL)
-            ufw allow 5432/tcp
-
-            # Open port 5436 (Database Test)
-            ufw allow 5436/tcp
-
-            # Reload UFW to apply changes
+            ufw allow 5432
+            ufw allow 5436
             ufw reload
