--- a/.github/workflows/setup-server.yml
+++ b/.github/workflows/setup-server.yml
@@ -55,7 +55,7 @@ jobs:
 
             ufw allow 80/tcp
             ufw allow 443/tcp
-            ufw allow 81
+            ufw allow 81/tcp
             ufw reload
 
             echo "Ports 80, 81, and 443 have been opened."
