--- a/.github/workflows/setup-server.yml
+++ b/.github/workflows/setup-server.yml
@@ -50,13 +50,13 @@ jobs:
                   - ./data:/data
                   - ./letsencrypt:/etc/letsencrypt
             EOF
+            cat $filename
 
             echo "Nginx Proxy Manager is now running."
 
             ufw allow 80/tcp
             ufw allow 443/tcp
-            ufw allow 81/tcp
-            ufw allow 22/tcp
+            ufw allow 81
             ufw reload
 
             echo "Ports 80, 81, and 443 have been opened."
