--- a/.github/workflows/setup-server.yml
+++ b/.github/workflows/setup-server.yml
@@ -19,7 +19,7 @@ jobs:
   install-platform:
     runs-on: ubuntu-latest
     steps:
-      - name: Connect to server and install softwares
+      - name: Connect to server and install software
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.STAGE_SERVER_HOST }}
@@ -37,12 +37,45 @@ jobs:
               echo "Docker Compose is already installed."
             fi
 
-            # Check if Nginx Proxy Manager is already installed
+            # Check if Nginx Proxy Manager directory exists
             if [ ! -d "~/nginx-proxy-manager" ]; then
-              echo "Nginx Proxy Manager not found, installing..."
-              mkdir ~/nginx-proxy-manager && cd ~/nginx-proxy-manager
+              echo "Nginx Proxy Manager not found, creating directory..."
+              mkdir ~/nginx-proxy-manager
+            else
+              echo "Nginx Proxy Manager directory already exists."
+            fi
 
+            cd ~/nginx-proxy-manager
+
+            # Create the Docker Compose file if it doesn't exist
+            if [ ! -f "docker-compose.yml" ]; then
+              cat << EOF > docker-compose.yml
+              version: '3.8'
+              services:
+                app:
+                  image: 'jc21/nginx-proxy-manager:latest'
+                  restart: unless-stopped
+                  ports:
+                    - '80:80'
+                    - '81:81'
+                    - '443:443'
+                  volumes:
+                    - ./data:/data
+                    - ./letsencrypt:/etc/letsencrypt
+              EOF
+              # Start Nginx Proxy Manager
+              docker-compose up -d
               echo "Nginx Proxy Manager is now running."
             else
-              echo "Nginx Proxy Manager is already installed."
+              echo "Nginx Proxy Manager is already installed and configured."
             fi
+
+            # Configure UFW
+            echo "Configuring UFW..."
+            sudo ufw allow 80/tcp
+            sudo ufw allow 443/tcp
+            sudo ufw allow 81/tcp
+            sudo ufw allow 22/tcp
+            sudo ufw reload
+            sudo ufw status
+            echo "Ports 80, 81, and 443 have been opened."
