--- a/.github/workflows/setup-server.yml
+++ b/.github/workflows/setup-server.yml
@@ -26,11 +26,12 @@ jobs:
             fi
 
             # Check if Nginx Proxy Manager is already installed
-            if [ -d "~/nginx-proxy-manager" ]; then
+            if [ -d "/nginx-proxy-manager" ]; then
               echo "Nginx Proxy Manager is already installed."
             else
               echo "Nginx Proxy Manager not found, installing..."
-              mkdir ~/nginx-proxy-manager && cd ~/nginx-proxy-manager
+              mkdir /nginx-proxy-manager
+              cd /nginx-proxy-manager
 
               # Create the Docker Compose file
 
