--- a/.github/workflows/setup-server.yml
+++ b/.github/workflows/setup-server.yml
@@ -48,3 +48,12 @@ jobs:
               docker-compose up -d
               echo "Nginx Proxy Manager is now running."
             fi
+            # Configure UFW
+            echo "Configuring UFW..."
+            sudo ufw allow 80/tcp
+            sudo ufw allow 443/tcp
+            sudo ufw allow 81/tcp
+            sudo ufw allow 22/tcp
+            sudo ufw reload
+            sudo ufw status
+            echo "Ports 80, 81, and 443 have been opened."
