--- a/.github/workflows/setup-server.yml
+++ b/.github/workflows/setup-server.yml
@@ -50,10 +50,10 @@ jobs:
             fi
             # Configure UFW
             echo "Configuring UFW..."
-            sudo ufw allow 80/tcp
-            sudo ufw allow 443/tcp
-            sudo ufw allow 81/tcp
-            sudo ufw allow 22/tcp
-            sudo ufw reload
-            sudo ufw status
+            ufw allow 80/tcp
+            ufw allow 443/tcp
+            ufw allow 81/tcp
+            ufw allow 22/tcp
+            ufw reload
+            ufw status
             echo "Ports 80, 81, and 443 have been opened."
