--- a/.github/workflows/setup-server.yml
+++ b/.github/workflows/setup-server.yml
@@ -16,7 +16,8 @@ jobs:
             apt install docker.io
 
             # Check if Docker Compose is already installed
-            if ! command -v docker-compose &> /dev/null; then
+            if ! command -v docker-compose &> /dev/null
+            then
               echo "Docker Compose not found, installing..."
               sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
               chmod +x /usr/local/bin/docker-compose
@@ -55,6 +56,7 @@ jobs:
             fi
             # Configure UFW
             echo "Configuring UFW..."
+            ufw enable
             ufw allow 80/tcp
             ufw allow 443/tcp
             ufw allow 81/tcp
