--- a/.github/workflows/setup-server.yml
+++ b/.github/workflows/setup-server.yml
@@ -56,14 +56,13 @@ jobs:
             fi
             # Configure UFW
             echo "Configuring UFW..."
-            sudo ufw enable
-            echo 'y'
             sudo ufw allow 80
             sudo ufw allow 443
             sudo ufw allow 81
             sudo ufw allow 22
             #sudo ufw allow from 203.0.113.101
             #sudo ufw delete allow from 203.0.113.101
+            echo "y" | sudo ufw enable
             sudo ufw reload
             sudo ufw status
 
