--- a/.github/workflows/install-postgres-database.yml
+++ b/.github/workflows/install-postgres-database.yml
@@ -40,7 +40,7 @@ jobs:
             echo "AP_DB_PORT=$AP_DB_PORT"
             echo "AP_DB_NAME=$AP_DB_NAME"
             echo "AP_DB_USERNAME=$AP_DB_USERNAME"
-            echo "AP_DB_PASSWORD=$AP_DB_PASSWORD"
+            echo "AP_DB_PASSWORD=${AP_DB_PASSWORD}"
             echo "AP_DB_SCHEMA=$AP_DB_SCHEMA"
             echo "AP_DB_LOGS=$AP_DB_LOGS"
 
