--- a/.github/workflows/install-postgres-database.yml
+++ b/.github/workflows/install-postgres-database.yml
@@ -44,8 +44,7 @@ jobs:
           echo "AP_DB_PORT=$AP_DB_PORT"
           echo "AP_DB_NAME=$AP_DB_NAME"
           echo "AP_DB_USERNAME=$AP_DB_USERNAME"
-          echo "AP_DB_PASSWORD=${AP_DB_PASSWORD}"
-          echo AP_DB_PASSWORD
+          echo "AP_DB_PASSWORD=$AP_DB_PASSWORD"
           echo "AP_DB_SCHEMA=$AP_DB_SCHEMA"
           echo "AP_DB_LOGS=$AP_DB_LOGS"
 
@@ -57,9 +56,6 @@ jobs:
           port: 22
           key: ${{ secrets.STAGE_SERVER_PRIVATE_SSH_KEY }}
           script: |
-            # Print environment variables for debugging
-            echo AP_DB_PASSWORD
-
             # Pull PostgreSQL image
             docker pull postgres:14
 
@@ -70,9 +66,9 @@ jobs:
             # Run Database
             docker run -d \
               --name postgres_db \
-              -e POSTGRES_PASSWORD=$AP_DB_PASSWORD \
-              -e POSTGRES_USER=$AP_DB_USERNAME \
-              -e POSTGRES_DB=$AP_DB_NAME \
+              -e POSTGRES_PASSWORD=${AP_DB_PASSWORD} \
+              -e POSTGRES_USER=${AP_DB_USERNAME} \
+              -e POSTGRES_DB=${AP_DB_NAME} \
               -p 5432:5432 \
               -v postgres_data:/var/lib/postgresql/data \
               postgres:14
